[gd_scene load_steps=17 format=3 uid="uid://nyxcpwpwmfse"]

[ext_resource type="Texture2D" uid="uid://6o0y52dm1hqi" path="res://Assets/art/farmingTilesheetComplete.png" id="1_a6c0v"]
[ext_resource type="Script" path="res://Scenes/Statics/shop_menu.gd" id="1_p1oii"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tkfj0"]
atlas = ExtResource("1_a6c0v")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp2pe"]
atlas = ExtResource("1_a6c0v")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_547dv"]
atlas = ExtResource("1_a6c0v")
region = Rect2(160, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7vkb1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkfj0")
}],
"loop": false,
"name": &"cabbage",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp2pe")
}],
"loop": false,
"name": &"corn",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_547dv")
}],
"loop": false,
"name": &"strawberry",
"speed": 0.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_s51jx"]
atlas = ExtResource("1_a6c0v")
region = Rect2(64, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_87rit"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s51jx")
}],
"loop": false,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lgibi"]
atlas = ExtResource("1_a6c0v")
region = Rect2(176, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_5dkd0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgibi")
}],
"loop": false,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_kpo41"]
atlas = ExtResource("1_a6c0v")
region = Rect2(176, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2a506"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpo41")
}],
"loop": false,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3uxs4"]
bg_color = Color(0.192157, 0.192157, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_crvt0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dctxv"]
bg_color = Color(0.192157, 0.192157, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jtw1e"]
bg_color = Color(0, 0, 0, 0)

[node name="shop_menu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 55.0
offset_bottom = 34.0
script = ExtResource("1_p1oii")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 55.0
offset_bottom = 34.0
color = Color(0.34902, 0.34902, 0.34902, 0.760784)

[node name="Icon" type="AnimatedSprite2D" parent="."]
position = Vector2(10, 11)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_7vkb1")
animation = &"corn"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = -3.0
offset_right = 55.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 11
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="coin" type="AnimatedSprite2D" parent="."]
position = Vector2(48, 6)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_87rit")

[node name="leftbuttonicon" type="AnimatedSprite2D" parent="."]
position = Vector2(8, 27)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_5dkd0")

[node name="rightbuttonicon" type="AnimatedSprite2D" parent="."]
position = Vector2(16, 26)
rotation = -1.5708
sprite_frames = SubResource("SpriteFrames_2a506")

[node name="leftButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 2.0
offset_top = 23.0
offset_right = 10.0
offset_bottom = 31.0
mouse_default_cursor_shape = 2

[node name="rightButton" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 14.0
offset_top = 23.0
offset_right = 22.0
offset_bottom = 31.0
mouse_default_cursor_shape = 2

[node name="buyButton" type="Button" parent="."]
offset_left = 36.0
offset_top = 22.0
offset_right = 55.0
offset_bottom = 34.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_3uxs4")
theme_override_styles/hover = SubResource("StyleBoxFlat_crvt0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_dctxv")
theme_override_styles/focus = SubResource("StyleBoxFlat_jtw1e")

[node name="buyButtonColor" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 22.0
offset_right = 55.0
offset_bottom = 34.0
color = Color(0.827451, 0.101961, 0.101961, 0.454902)

[connection signal="pressed" from="leftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="rightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="buyButton" to="." method="_on_buy_button_pressed"]
